Updated text to free ranch

--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,8 @@
 
 <h1>Version Control System</h1>
 <p>
-What is Version Control System: A version control system, or VCS, tracks the history of changes as people and teams collaborate on projects together. As developers make changes to the project, any earlier version of the project can be recovered at any time.
+In a world where you can be anyone, BE YOURSELF.GRACED FILLED
+GRATEFUL FOR LIFE.
 </p>
 
 </body>
